syntax = "proto3";

package reserve.v1;

message Reserve {
  string id = 1;
  string external_ref = 2;
  Status status = 3;
  repeated Item items = 4;
  message Item {
    string id = 1;
    int32 amount = 2;
    optional int32 insufficient = 3;
    bool reserved = 4;
  }
  enum Status {
    CREATED = 0;
    INSUFFICIENT = 1;
    APPROVED = 2;
    RELEASED = 3;
    CANCELLED = 4;
  }
}
